Avancement du header

--- a/index.html
+++ b/index.html
@@ -4,11 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Booki</title>
-    <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/normalize.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <img id="logo" src="./images/logo/Booki.png" alt="logo booki" />
+            <div>
+                <a href="#">Hébergements</a>
+                <a href="#">Activités</a>
+            </div>
+        </nav>
+    </header>
     
 </body>
 </html>
