fin de l'entête

--- a/index.html
+++ b/index.html
@@ -8,15 +8,17 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <header>
-        <nav>
-            <img id="logo" src="./images/logo/Booki.png" alt="logo booki" />
-            <div>
-                <a href="#">Hébergements</a>
-                <a href="#">Activités</a>
-            </div>
-        </nav>
-    </header>
+    <div id="page_block">
+        <header>
+            <nav>
+                <a href="#"><img id="logo" src="./images/logo/Booki.png" alt="logo booki" /></a>
+                <div id="nav_container">
+                    <div id="hebergements"><a href="#" class="a_decoration">Hébergements</a></div>
+                    <div id="activités"><a href="#" class="a_decoration">Activités</a></div>
+                </div>
+            </nav>
+        </header>
+    </div>
     
 </body>
 </html>
