--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <div id="page_block">
         <header>
+
             <nav>
                 <a href="#"><img id="logo" src="./images/logo/Booki.png" alt="logo booki" /></a>
                 <div id="nav_container">
@@ -18,6 +19,13 @@
                 </div>
             </nav>
         </header>
+
+        <section id="section1">
+            <div>
+                <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
+                <p>En plein centre ville ou en pleine nature</p>
+            </div>
+        </section>
     </div>
     
 </body>
