Barre de recherche terminée

--- a/index.html
+++ b/index.html
@@ -4,28 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Booki</title>
+    <script src="https://kit.fontawesome.com/97e0bfc9c9.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <div id="page_block">
+        <!-- Logo, Nav bar -->
         <header>
-
             <nav>
-                <a href="#"><img id="logo" src="./images/logo/Booki.png" alt="logo booki" /></a>
+                <a href="#"><img id="logo" src="./images/logo/Booki@3x.png" alt="logo booki" /></a>
                 <div id="nav_container">
                     <div id="hebergements"><a href="#" class="a_decoration">Hébergements</a></div>
                     <div id="activités"><a href="#" class="a_decoration">Activités</a></div>
                 </div>
             </nav>
         </header>
+        <!-- Headings, recherche -->
 
-        <section id="section1">
-            <div>
-                <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
-                <p>En plein centre ville ou en pleine nature</p>
-            </div>
-        </section>
+        <main>
+            <section id="section1">
+                    <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
+                    <p>En plein centre ville ou en pleine nature</p>
+                    <span id="search">
+                        <i class="fas fa-map-marker-alt"></i>
+                        <input type="text" placeholder="Marseille, France">
+                        <button><a href="#">Rechercher</a></button>
+                    </span>
+            </section>
+        </main>
     </div>
     
 </body>
