Boutons de filtres + barre info

--- a/index.html
+++ b/index.html
@@ -29,8 +29,52 @@
                     <span id="search">
                         <i class="fas fa-map-marker-alt"></i>
                         <input type="text" placeholder="Marseille, France">
-                        <button><a href="#">Rechercher</a></button>
+                        <button>
+                            <span>Rechercher</span>
+                            <i class="fas fa-search"></i>
+                        </button>
                     </span>
+                    <!-- Filtres -->
+                    <div id="filters">
+                        <div id="bloc1">
+                            <h2>Filtres</h2>
+                        </div>
+                        <div id="list_block">
+                            <ul id="filters_lists">
+                                <li>
+                                    <button>
+                                    <span class="icon_design"><i class="fas fa-money-bill-wave"></i></span>
+                                    <span class="filter_text">Économique</span>
+                                    </button>
+                                </li>
+
+                                <li>
+                                    <button>
+                                    <span class="icon_design"><i class="fas fa-child"></i></span>
+                                    <span class="filter_text">Familial</span>
+                                    </button>
+                                </li>
+
+                                <li>
+                                    <button>
+                                    <span class="icon_design"><i class="fas fa-heart"></i></span>
+                                    <span class="filter_text">Romantique</span>
+                                    </button>
+                                </li>
+
+                                <li>
+                                    <button>
+                                    <span class="icon_design"><i class="fas fa-dog"></i></span>
+                                    <span class="filter_text">Animaux autorisés</span>
+                                    </button>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div id="information">
+                        <i class="fas fa-info"></i>
+                        <p><span id="info_text">Plus de 500 logements sont disponibles dans cette ville</span></p>
+                    </div>
             </section>
         </main>
     </div>
