ajout des hotels

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             <nav>
                 <a href="#"><img id="logo" src="./images/logo/Booki@3x.png" alt="logo booki" /></a>
                 <div id="nav_container">
-                    <div id="hebergements"><a href="#" class="a_decoration">Hébergements</a></div>
-                    <div id="activités"><a href="#" class="a_decoration">Activités</a></div>
+                    <div id="hebergements_header"><a href="#" class="a_decoration">Hébergements</a></div>
+                    <div id="activités_header"><a href="#" class="a_decoration">Activités</a></div>
                 </div>
             </nav>
         </header>
@@ -72,12 +72,108 @@
                         </div>
                     </div>
                     <div id="information">
-                        <i class="fas fa-info"></i>
+                        <span id="icon_info"><i class="fas fa-info"></i></span>
                         <p><span id="info_text">Plus de 500 logements sont disponibles dans cette ville</span></p>
                     </div>
             </section>
+            <section id="section2">
+                <div id="hebergements_results">
+                    <div id="bloc1">
+                        <h2 class="h2_results">Hébergements à Marseille</h2>
+                    </div>
+                    <div id="bloc2">
+                        <div class="hebergements_description">
+                            <img class="hebergements_pictures" src="./images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="photo auberge la cannebiere">
+                            <h3 class="h3_results">Auberge la Cannebière</h3>
+                            <p class="p_results">Nuit à partir de <span class="price_bold">25€</span></p>
+                            <div class="stars_results">
+                                <span class="stars_blue"><i class="fas fa-star"></i></span>
+                                <span class="stars_blue"><i class="fas fa-star"></i></span>
+                                <span class="stars_blue"><i class="fas fa-star"></i></span>
+                                <span class="stars_blue"><i class="fas fa-star"></i></span>
+                                <span class="stars_gray"><i class="fas fa-star"></i></span>
+                            </div>
+                        </div>
+                        
+                        <div  class="hebergements_description">
+                            <img class="hebergements_pictures" src="./images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="photo hotel du port">
+                            <h3 class="h3_results">Hôtel du port</h3>
+                            <p class="p_results">Nuit à partir de <span class="price_bold">52€</span></p>
+                            <div class="stars_results">
+                                <span class="stars_blue"><i class="fas fa-star"></i></span>
+                                <span class="stars_blue"><i class="fas fa-star"></i></span>
+                                <span class="stars_blue"><i class="fas fa-star"></i></span>
+                                <span class="stars_blue"><i class="fas fa-star"></i></span>
+                                <span class="stars_blue"><i class="fas fa-star"></i></span>
+                            </div>
+                        </div>
+
+                        <div  class="hebergements_description">
+                            <img class="hebergements_pictures" src="./images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="photo hotel les mouettes">
+                            <h3 class="h3_results">Hôtel les mouettes</h3>
+                            <p class="p_results">Nuit à partir de <span class="price_bold">76€</span></p>
+                            <div class="stars_results">
+                                <span class="stars_blue"><i class="fas fa-star"></i></span>
+                                <span class="stars_blue"><i class="fas fa-star"></i></span>
+                                <span class="stars_blue"><i class="fas fa-star"></i></span>
+                                <span class="stars_blue"><i class="fas fa-star"></i></span>
+                                <span class="stars_gray"><i class="fas fa-star"></i></span>
+                            </div>
+                        </div>
+                    </div>
+                    <div id="bloc3">
+                        <div class="hebergements_description">
+                                <img class="hebergements_pictures" src="./images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="photo hotel de la mer">
+                                <h3 class="h3_results">Hôtel de la mer</h3>
+                                <p class="p_results">Nuit à partir de <span class="price_bold">46€</span></p>
+                                <div class="stars_results">
+                                    <span class="stars_blue"><i class="fas fa-star"></i></span>
+                                    <span class="stars_blue"><i class="fas fa-star"></i></span>
+                                    <span class="stars_blue"><i class="fas fa-star"></i></span>
+                                    <span class="stars_gray"><i class="fas fa-star"></i></span>
+                                    <span class="stars_gray"><i class="fas fa-star"></i></span>
+                                </div>
+                        </div>
+
+                        <div class="hebergements_description">
+                            <img class="hebergements_pictures" src="./images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="photo auberge le panier">
+                            <h3 class="h3_results">Auberge Le Panier</h3>
+                            <p class="p_results">Nuit à partir de <span class="price_bold">23€</span></p>
+                            <div class="stars_results">
+                                <span class="stars_blue"><i class="fas fa-star"></i></span>
+                                <span class="stars_blue"><i class="fas fa-star"></i></span>
+                                <span class="stars_blue"><i class="fas fa-star"></i></span>
+                                <span class="stars_blue"><i class="fas fa-star"></i></span>
+                                <span class="stars_gray"><i class="fas fa-star"></i></span>
+                            </div>
+                        </div>
+
+                        <div class="hebergements_description">
+                            <img class="hebergements_pictures" src="./images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="photo hotel chez Amina">
+                            <h3 class="h3_results">Hôtel chez Amina</h3>
+                            <p class="p_results">Nuit à partir de <span class="price_bold">96€</span></p>
+                            <div class="stars_results">
+                                <span class="stars_blue"><i class="fas fa-star"></i></span>
+                                <span class="stars_blue"><i class="fas fa-star"></i></span>
+                                <span class="stars_blue"><i class="fas fa-star"></i></span>
+                                <span class="stars_blue"><i class="fas fa-star"></i></span>
+                                <span class="stars_blue"><i class="fas fa-star"></i></span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div id="populaires_results">
+                    <div>
+                        <h2 class="h2_results">Les plus populaires</h2>
+                    </div>
+                    <div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                    </div>
+                </div>
+            </section>
         </main>
-    </div>
-    
+    </div>    
 </body>
 </html>
