Structure de la section 2 terminée

--- a/index.html
+++ b/index.html
@@ -76,6 +76,9 @@
                         <p><span id="info_text">Plus de 500 logements sont disponibles dans cette ville</span></p>
                     </div>
             </section>
+
+            <!-- Résultats de recherche -->
+
             <section id="section2">
                 <div id="hebergements_results">
                     <div id="bloc1">
@@ -83,7 +86,7 @@
                     </div>
                     <div id="bloc2">
                         <div class="hebergements_description">
-                            <img class="hebergements_pictures" src="./images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="photo auberge la cannebiere">
+                            <img class="hebergements_pictures" src="./images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="photo auberge la cannebiere"> 
                             <h3 class="h3_results">Auberge la Cannebière</h3>
                             <p class="p_results">Nuit à partir de <span class="price_bold">25€</span></p>
                             <div class="stars_results">
@@ -92,13 +95,13 @@
                                 <span class="stars_blue"><i class="fas fa-star"></i></span>
                                 <span class="stars_blue"><i class="fas fa-star"></i></span>
                                 <span class="stars_gray"><i class="fas fa-star"></i></span>
-                            </div>
+                            </div> 
                         </div>
                         
-                        <div  class="hebergements_description">
+                        <div class="hebergements_description">
                             <img class="hebergements_pictures" src="./images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="photo hotel du port">
                             <h3 class="h3_results">Hôtel du port</h3>
-                            <p class="p_results">Nuit à partir de <span class="price_bold">52€</span></p>
+                            <p class="p_results">Nuit à partir de <span class="price_bold">25€</span></p>
                             <div class="stars_results">
                                 <span class="stars_blue"><i class="fas fa-star"></i></span>
                                 <span class="stars_blue"><i class="fas fa-star"></i></span>
@@ -121,18 +124,19 @@
                             </div>
                         </div>
                     </div>
+
                     <div id="bloc3">
                         <div class="hebergements_description">
-                                <img class="hebergements_pictures" src="./images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="photo hotel de la mer">
-                                <h3 class="h3_results">Hôtel de la mer</h3>
-                                <p class="p_results">Nuit à partir de <span class="price_bold">46€</span></p>
-                                <div class="stars_results">
-                                    <span class="stars_blue"><i class="fas fa-star"></i></span>
-                                    <span class="stars_blue"><i class="fas fa-star"></i></span>
-                                    <span class="stars_blue"><i class="fas fa-star"></i></span>
-                                    <span class="stars_gray"><i class="fas fa-star"></i></span>
-                                    <span class="stars_gray"><i class="fas fa-star"></i></span>
-                                </div>
+                            <img class="hebergements_pictures" src="./images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="photo hotel de la mer">
+                            <h3 class="h3_results">Hôtel de la mer</h3>
+                            <p class="p_results">Nuit à partir de <span class="price_bold">46€</span></p>
+                            <div class="stars_results">
+                                <span class="stars_blue"><i class="fas fa-star"></i></span>
+                                <span class="stars_blue"><i class="fas fa-star"></i></span>
+                                <span class="stars_blue"><i class="fas fa-star"></i></span>
+                                <span class="stars_gray"><i class="fas fa-star"></i></span>
+                                <span class="stars_gray"><i class="fas fa-star"></i></span>
+                            </div>
                         </div>
 
                         <div class="hebergements_description">
@@ -161,17 +165,77 @@
                             </div>
                         </div>
                     </div>
-                </div>
-                <div id="populaires_results">
-                    <div>
-                        <h2 class="h2_results">Les plus populaires</h2>
-                    </div>
-                    <div>
-                        <div></div>
-                        <div></div>
-                        <div></div>
+                    <div id="bloc4">
+                        <p>Afficher plus</p>
                     </div>
                 </div>
+                <aside id="populaires_results">
+                    <h2 class="h2_results">Les plus populaires <span id="logo_flèche"><i class="fas fa-chart-line"></i></span></h2>
+                    <div>
+                        <div class="populaires_description">
+                            <div>
+                                <img class="populaires_pictures" src="./images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="hotel le soleil du matin">
+                            </div>
+                            <div class="description_column">
+                                <div>
+                                    <h3 class="h3_results" >Hôtel Le soleil du matin</h3>
+                                    <p class="p_results">Nuit à partir de <span class="price_bold">128€</span></p>
+                                </div>
+                                <div class="stars_results">
+                                    <span class="stars_blue"><i class="fas fa-star"></i></span>
+                                    <span class="stars_blue"><i class="fas fa-star"></i></span>
+                                    <span class="stars_blue"><i class="fas fa-star"></i></span>
+                                    <span class="stars_blue"><i class="fas fa-star"></i></span>
+                                    <span class="stars_blue"><i class="fas fa-star"></i></span>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div>
+                            <div class="populaires_description">
+                                <div>
+                                    <img class="populaires_pictures" src="./images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="hotel au coeur de l'eau">
+                                </div>
+                                <div class="description_column">
+                                    <div>
+                                        <h3 class="h3_results" >Au coeur de l'eau <br> Chambres d'hôtes</h3>
+                                        <p class="p_results">Nuit à partir de <span class="price_bold">71€</span></p>
+                                    </div>
+                                    <div class="stars_results">
+                                        <span class="stars_blue"><i class="fas fa-star"></i></span>
+                                        <span class="stars_blue"><i class="fas fa-star"></i></span>
+                                        <span class="stars_blue"><i class="fas fa-star"></i></span>
+                                        <span class="stars_blue"><i class="fas fa-star"></i></span>
+                                        <span class="stars_gray"><i class="fas fa-star"></i></span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div>
+                            <div>
+                                <div class="populaires_description">
+                                    <div>
+                                        <img class="populaires_pictures" src="./images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="hotel tout bleu et blanc">
+                                    </div>
+                                    <div class="description_column">
+                                        <div>
+                                            <h3 class="h3_results" >Hôtel tout bleu et blanc</h3>
+                                            <p class="p_results">Nuit à partir de <span class="price_bold">68€</span></p>
+                                        </div>
+                                        <div class="stars_results">
+                                            <span class="stars_blue"><i class="fas fa-star"></i></span>
+                                            <span class="stars_blue"><i class="fas fa-star"></i></span>
+                                            <span class="stars_blue"><i class="fas fa-star"></i></span>
+                                            <span class="stars_blue"><i class="fas fa-star"></i></span>
+                                            <span class="stars_gray"><i class="fas fa-star"></i></span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </aside>
             </section>
         </main>
     </div>    
