--- a/index.html
+++ b/index.html
@@ -166,11 +166,20 @@
                         </div>
                     </div>
                     <div id="bloc4">
-                        <p>Afficher plus</p>
+                        <a href="#">
+                            <p>Afficher plus</p>
+                        </a>
                     </div>
                 </div>
                 <aside id="populaires_results">
-                    <h2 class="h2_results">Les plus populaires <span id="logo_flèche"><i class="fas fa-chart-line"></i></span></h2>
+                        <div id="bloc_titre_flèche">
+                            <div id="bloc_titre">
+                                <h2 class="h2_results">Les plus populaires</h2>
+                            </div>
+                            <div id="bloc_flèche">
+                                <span id="logo_flèche"><i class="fas fa-chart-line"></i></span>
+                            </div>
+                        </div>
                     <div>
                         <div class="populaires_description">
                             <div>
@@ -236,6 +245,67 @@
                         </div>
                     </div>
                 </aside>
+            </section>
+            <section id="section3">
+
+                <div id="activités_marseille_titre">
+                    <h2 class="h2_activités">Activités à Marseille</h2>
+                </div>
+                <div id="activités_marseille_container">
+                    <div id="vieux_port">
+                        <div>
+                            <img id="img_vieux_port" src="./images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="photo du vieux port">
+                        </div>
+                        <div class="activités_lieu">
+                            <h3 class="h3_activités">Vieux port</h3>
+                        </div>
+                    </div>
+                    <div id="pomègues_frioul">
+                        <div id="pomègues">
+                            <div>
+                                <img id="img_pomègues" src="./images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="photo de pomègues">
+                            </div>
+                            <div class="activités_lieu">
+                                <h3 class="h3_activités">Fort de Pomègues</h3>
+                            </div>
+                        </div>
+                        <div id="frioul">
+                            <div>
+                                <img id="img_frioul" src="./images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="photo de frioul">
+                            </div>
+                            <div class="activités_lieu">
+                                <h3 class="h3_activités">Îles du Frioul</h3>
+                            </div>
+                        </div>
+                    </div>
+                    <div id="calanques">
+                        <div>
+                            <img id="img_calanques" src="./images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="photo des calanques">
+                        </div>
+                        <div class="activités_lieu">
+                            <h3 class="h3_activités">Parc National des Calanques</h3>
+                        </div>
+                    </div>
+                    <div id="garde_longchamp" >
+                        <div id="garde">
+                            <div>
+                                <img id="img_garde" src="./images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="photo de notre dame">
+                            </div>
+                            <div class="activités_lieu">
+                                <h3 class="h3_activités">Notre-Dame-de-la-Garde</h3>
+                            </div>
+                        </div>
+                        <div id="longchamp">
+                            <div>
+                                <img id="img_longchamp" src="./images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="photo de longchamp">
+                            </div>
+                            <div class="activités_lieu">
+                                <h3 class="h3_activités">Parc Longchamp</h3>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
             </section>
         </main>
     </div>    
