--- a/index.html
+++ b/index.html
@@ -308,6 +308,40 @@
 
             </section>
         </main>
+        <footer>
+            <div class="footer_columns">
+                <h3 class="h3_footer">A propos</h3>
+                <a href="#">
+                    <p class="p_footer">Fonctionnement du site</p>
+                </a>
+                <a href="#">
+                    <p class="p_footer">Conditions générales de vente</p>
+                </a>
+                <a href="#">
+                    <p class="p_footer">Données et confidentialité</p>
+                </a>
+            </div>
+
+            <div class="footer_columns">
+                <h3 class="h3_footer">Nos hébergements</h3>
+                <a href="#">
+                    <p class="p_footer">Charte qualité</p>
+                </a>
+                <a href="">
+                    <p class="p_footer">Soumettre votre hôtel</p>
+                </a>
+            </div>
+
+            <div class="footer_columns">
+                <h3 class="h3_footer">Assistance</h3>
+                <a href="#">
+                    <p class="p_footer">Centre d'aide</p>
+                </a>
+                <a href="#">
+                    <p class="p_footer">Nous contacter</p>
+                </a>
+            </div>
+        </footer>
     </div>    
 </body>
 </html>
