Rectification des marges

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <section id="section2">
                 <div id="hebergements_results">
                     <div id="bloc1">
-                        <h2 class="h2_results">Hébergements à Marseille</h2>
+                        <h2 class="h2_hébergements_à_marseille">Hébergements à Marseille</h2>
                     </div>
                     <div id="bloc2">
                         <div class="hebergements_description">
@@ -174,7 +174,7 @@
                 <aside id="populaires_results">
                         <div id="bloc_titre_flèche">
                             <div id="bloc_titre">
-                                <h2 class="h2_results">Les plus populaires</h2>
+                                <h2 class="h2_hébergements_populaires">Les plus populaires</h2>
                             </div>
                             <div id="bloc_flèche">
                                 <span id="logo_flèche"><i class="fas fa-chart-line"></i></span>
@@ -249,7 +249,7 @@
             <section id="section3">
 
                 <div id="activités_marseille_titre">
-                    <h2 class="h2_activités">Activités à Marseille</h2>
+                    <h2 class="h2_activités_à_marseille">Activités à Marseille</h2>
                 </div>
                 <div id="activités_marseille_container">
                     <div id="vieux_port">
