changement de nom des id

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     </span>
                     <!-- Filtres -->
                     <div id="filters">
-                        <div id="bloc1">
+                        <div id="title_filtres_block">
                             <h2>Filtres</h2>
                         </div>
                         <div id="list_block">
@@ -81,10 +81,10 @@
 
             <section id="section2">
                 <div id="hebergements_results">
-                    <div id="bloc1">
+                    <div id="title_hébergements_block">
                         <h2 class="h2_hébergements_à_marseille">Hébergements à Marseille</h2>
                     </div>
-                    <div id="bloc2">
+                    <div id="hébergements_first_block">
                         <div class="hebergements_description">
                             <img class="hebergements_pictures" src="./images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="photo auberge la cannebiere"> 
                             <h3 class="h3_results">Auberge la Cannebière</h3>
@@ -125,7 +125,7 @@
                         </div>
                     </div>
 
-                    <div id="bloc3">
+                    <div id="hébergements_second_block">
                         <div class="hebergements_description">
                             <img class="hebergements_pictures" src="./images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="photo hotel de la mer">
                             <h3 class="h3_results">Hôtel de la mer</h3>
@@ -165,19 +165,19 @@
                             </div>
                         </div>
                     </div>
-                    <div id="bloc4">
+                    <div id="afficher_plus_block">
                         <a href="#">
                             <p>Afficher plus</p>
                         </a>
                     </div>
                 </div>
                 <aside id="populaires_results">
-                        <div id="bloc_titre_flèche">
-                            <div id="bloc_titre">
+                        <div id="icon_title_block">
+                            <div id="title_block">
                                 <h2 class="h2_hébergements_populaires">Les plus populaires</h2>
                             </div>
-                            <div id="bloc_flèche">
-                                <span id="logo_flèche"><i class="fas fa-chart-line"></i></span>
+                            <div id="icon_block">
+                                <span id="icon_populaires"><i class="fas fa-chart-line"></i></span>
                             </div>
                         </div>
                     <div>
