--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 </head>
 <body>
     <div id="page_block">
+
         <!-- Logo, Nav bar -->
+
         <header>
             <nav>
                 <a href="#"><img id="logo" src="./images/logo/Booki@3x.png" alt="logo booki" /></a>
@@ -20,7 +22,8 @@
                 </div>
             </nav>
         </header>
-        <!-- Headings, recherche -->
+
+        <!-- Titre, recherche -->
 
         <main>
             <section id="section1">
@@ -34,7 +37,9 @@
                             <i class="fas fa-search"></i>
                         </button>
                     </span>
+
                     <!-- Filtres -->
+                    
                     <div id="filters">
                         <div id="title_filtres_block">
                             <h2>Filtres</h2>
@@ -71,6 +76,9 @@
                             </ul>
                         </div>
                     </div>
+
+            <!-- Information -->
+
                     <div id="information">
                         <span id="icon_info"><i class="fas fa-info"></i></span>
                         <p><span id="info_text">Plus de 500 logements sont disponibles dans cette ville</span></p>
@@ -78,6 +86,8 @@
             </section>
 
             <!-- Résultats de recherche -->
+
+            <!-- Hébergements à Marseille -->
 
             <section id="section2">
                 <div id="hebergements_results">
@@ -171,6 +181,9 @@
                         </a>
                     </div>
                 </div>
+
+                <!-- Hébergements populaires -->
+
                 <aside id="populaires_results">
                         <div id="icon_title_block">
                             <div id="title_block">
@@ -246,8 +259,10 @@
                     </div>
                 </aside>
             </section>
-            <section id="section3">
 
+            <!-- Activités à Marseille -->
+
+            <section id="section3">
                 <div id="activités_marseille_titre">
                     <h2 class="h2_activités_à_marseille">Activités à Marseille</h2>
                 </div>
@@ -308,6 +323,9 @@
 
             </section>
         </main>
+
+        <!-- Footer -->
+
         <footer>
             <div class="footer_columns">
                 <h3 class="h3_footer">A propos</h3>
