ajout des ancres hébergements + activités

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             <nav>
                 <a href="#"><img id="logo" src="./images/logo/Booki@3x.png" alt="logo booki" /></a>
                 <div id="nav_container">
-                    <div id="hebergements_header"><a href="#" class="a_decoration">Hébergements</a></div>
-                    <div id="activités_header"><a href="#" class="a_decoration">Activités</a></div>
+                    <div id="hebergements_header"><a href="#hébergements" class="a_decoration">Hébergements</a></div>
+                    <div id="activités_header"><a href="#activités" class="a_decoration">Activités</a></div>
                 </div>
             </nav>
         </header>
@@ -39,7 +39,7 @@
                     </span>
 
                     <!-- Filtres -->
-                    
+
                     <div id="filters">
                         <div id="title_filtres_block">
                             <h2>Filtres</h2>
@@ -92,7 +92,7 @@
             <section id="section2">
                 <div id="hebergements_results">
                     <div id="title_hébergements_block">
-                        <h2 class="h2_hébergements_à_marseille">Hébergements à Marseille</h2>
+                        <h2 id="hébergements" class="h2_hébergements_à_marseille">Hébergements à Marseille</h2>
                     </div>
                     <div id="hébergements_first_block">
                         <div class="hebergements_description">
@@ -264,7 +264,7 @@
 
             <section id="section3">
                 <div id="activités_marseille_titre">
-                    <h2 class="h2_activités_à_marseille">Activités à Marseille</h2>
+                    <h2 id="activités" class="h2_activités_à_marseille">Activités à Marseille</h2>
                 </div>
                 <div id="activités_marseille_container">
                     <div id="vieux_port">
