Correction de la nav bar

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             <nav>
                 <a href="#"><img id="logo" src="./images/logo/Booki@3x.png" alt="logo booki" /></a>
                 <div id="nav_container">
-                    <div id="hebergements_header"><a href="#hébergements" class="a_decoration">Hébergements</a></div>
-                    <div id="activités_header"><a href="#activités" class="a_decoration">Activités</a></div>
+                    <a href="#hébergements" class="a_decoration"><div id="hebergements_header">Hébergements</div></a>
+                    <a href="#activités" class="a_decoration"><div id="activités_header">Activités</div></a>
                 </div>
             </nav>
         </header>
@@ -94,7 +94,7 @@
                     <div id="title_hébergements_block">
                         <h2 id="hébergements" class="h2_hébergements_à_marseille">Hébergements à Marseille</h2>
                     </div>
-                    <div id="hébergements_first_block">
+                    <div id="card_block">
                         <div class="hebergements_description">
                             <img class="hebergements_pictures" src="./images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="photo auberge la cannebiere"> 
                             <h3 class="h3_results">Auberge la Cannebière</h3>
@@ -133,9 +133,7 @@
                                 <span class="stars_gray"><i class="fas fa-star"></i></span>
                             </div>
                         </div>
-                    </div>
-
-                    <div id="hébergements_second_block">
+                    
                         <div class="hebergements_description">
                             <img class="hebergements_pictures" src="./images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="photo hotel de la mer">
                             <h3 class="h3_results">Hôtel de la mer</h3>
