--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                             <div class="hébergements_card_content">
                                 <h3 class="hébergements_h3">Auberge la Cannebière</h3>
                                 <p class="hébergements_p">Nuit à partir de <span class="price_bold">25€</span></p>
-                                <div class="stars_results">
+                                <div class="hébergements_stars">
                                     <span class="stars_blue"><i class="fas fa-star"></i></span>
                                     <span class="stars_blue"><i class="fas fa-star"></i></span>
                                     <span class="stars_blue"><i class="fas fa-star"></i></span>
@@ -119,7 +119,7 @@
                             <div class="hébergements_card_content">
                                 <h3 class="hébergements_h3">Hôtel du port</h3>
                                 <p class="hébergements_p">Nuit à partir de <span class="price_bold">25€</span></p>
-                                <div class="stars_results">
+                                <div class="hébergements_stars">
                                     <span class="stars_blue"><i class="fas fa-star"></i></span>
                                     <span class="stars_blue"><i class="fas fa-star"></i></span>
                                     <span class="stars_blue"><i class="fas fa-star"></i></span>
@@ -136,7 +136,7 @@
                             <div class="hébergements_card_content">
                                 <h3 class="hébergements_h3">Hôtel les mouettes</h3>
                                 <p class="hébergements_p">Nuit à partir de <span class="price_bold">76€</span></p>
-                                <div class="stars_results">
+                                <div class="hébergements_stars">
                                     <span class="stars_blue"><i class="fas fa-star"></i></span>
                                     <span class="stars_blue"><i class="fas fa-star"></i></span>
                                     <span class="stars_blue"><i class="fas fa-star"></i></span>
@@ -153,7 +153,7 @@
                             <div class="hébergements_card_content">
                                 <h3 class="hébergements_h3">Hôtel de la mer</h3>
                                 <p class="hébergements_p">Nuit à partir de <span class="price_bold">46€</span></p>
-                                <div class="stars_results">
+                                <div class="hébergements_stars">
                                     <span class="stars_blue"><i class="fas fa-star"></i></span>
                                     <span class="stars_blue"><i class="fas fa-star"></i></span>
                                     <span class="stars_blue"><i class="fas fa-star"></i></span>
@@ -170,7 +170,7 @@
                             <div class="hébergements_card_content">
                                 <h3 class="hébergements_h3">Auberge Le Panier</h3>
                                 <p class="hébergements_p">Nuit à partir de <span class="price_bold">23€</span></p>
-                                <div class="stars_results">
+                                <div class="hébergements_stars">
                                     <span class="stars_blue"><i class="fas fa-star"></i></span>
                                     <span class="stars_blue"><i class="fas fa-star"></i></span>
                                     <span class="stars_blue"><i class="fas fa-star"></i></span>
@@ -187,7 +187,7 @@
                             <div class="hébergements_card_content">
                                 <h3 class="hébergements_h3">Hôtel chez Amina</h3>
                                 <p class="hébergements_p">Nuit à partir de <span class="price_bold">96€</span></p>
-                                <div class="stars_results">
+                                <div class="hébergements_stars">
                                     <span class="stars_blue"><i class="fas fa-star"></i></span>
                                     <span class="stars_blue"><i class="fas fa-star"></i></span>
                                     <span class="stars_blue"><i class="fas fa-star"></i></span>
@@ -224,7 +224,7 @@
                             <div class="description_column">
                                 <h3 class="populaires_h3" >Hôtel Le soleil du matin</h3>
                                 <p class="populaires_p">Nuit à partir de <span class="price_bold">128€</span></p>
-                                <div class="stars_results">
+                                <div class="populaires_stars">
                                     <span class="stars_blue"><i class="fas fa-star"></i></span>
                                     <span class="stars_blue"><i class="fas fa-star"></i></span>
                                     <span class="stars_blue"><i class="fas fa-star"></i></span>
@@ -241,7 +241,7 @@
                             <div class="description_column">
                                 <h3 class="populaires_h3" >Au coeur de l'eau Chambres d'hôtes</h3>
                                 <p class="populaires_p">Nuit à partir de <span class="price_bold">71€</span></p>
-                                <div class="stars_results">
+                                <div class="populaires_stars">
                                     <span class="stars_blue"><i class="fas fa-star"></i></span>
                                     <span class="stars_blue"><i class="fas fa-star"></i></span>
                                     <span class="stars_blue"><i class="fas fa-star"></i></span>
@@ -258,7 +258,7 @@
                             <div class="description_column">
                                 <h3 class="populaires_h3" >Hôtel tout bleu et blanc</h3>
                                 <p class="populaires_p">Nuit à partir de <span class="price_bold">68€</span></p>
-                                <div class="stars_results">
+                                <div class="populaires_stars">
                                     <span class="stars_blue"><i class="fas fa-star"></i></span>
                                     <span class="stars_blue"><i class="fas fa-star"></i></span>
                                     <span class="stars_blue"><i class="fas fa-star"></i></span>
